--- a/extra/Ausejo.html
+++ b/extra/Ausejo.html
@@ -3,17 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Portfolio</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
+        <link href="/assets/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <div class="group-name">
-                <a href="/assets/index.html" class="name">GROUP "..."</a>
-            </div>
+            <div class="group-name"><a href="#" class="name">GROUP "..."</a> </div>
             <div class="navbar">
                 <nav class="nav">
                     <ul class="navbar-items">
@@ -24,7 +22,8 @@
                             <button type="button" class="btn-about">About Us</button>
                         </li>                   
                     </ul>
-                </nav>               
+                </nav>
+                <!-- mobile
                 <div class="nav-menu">
                     <nav class="nav-mobile">
                         <ul class="mobile-menu">
@@ -32,12 +31,12 @@
                                 <a href="#" class="mobile-links">Ausejo</a>
                                 <a href="#" class="mobile-links">Barlam</a>
                                 <a href="#" class="mobile-links">Vista</a>
-                                <button type="button" class="mobile-btn-about">About Us</button>
+                                <a href="#"><button type="button" class="mobile-btn-about">About Us</button></a>
                             </li>
                         </ul>
                     </nav>
-                </div>                
+                </div>
+                -->
             </div>
         </header>
     </body>
-</html>
