--- a/assets/index.html
+++ b/assets/index.html
@@ -18,10 +18,10 @@
                 <nav class="nav">
                     <ul class="navbar-items">
                         <li class="navbar-links">
-                            <a href="/extra/Ausejo.html" class="links" target="_self">Ausejo</a>
+                            <a href="/extra/Ausejo.html" class="links" target="_self">Vista</a>
                             <a href="/extra/Barlam.html" class="links" target="_self">Barlam</a>
-                            <a href="/extra/Vista.html" class="links" target="_self">Vista</a>
-                            <button type="button" class="btn-about">About Us</button>
+                            <a href="/extra/Vista.html" class="links" target="_self">Careers</a>
+                            <a href="/extra/About-us.html"><button type="button" class="btn-about">About Us</button></a>
                         </li>                   
                     </ul>
                 </nav>               
