--- a/extra/Vista.html
+++ b/extra/Vista.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <title>Portfolio</title>
-        <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/assets/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +10,33 @@
     </head>
     <body>
         <header>
-            <h1>Vista</h1>
+            <div class="group-name">
+                <a href="/assets/index.html" class="name">HOME</a>
+            </div>
+            <div class="navbar">
+                <nav class="nav">
+                    <ul class="navbar-items">
+                        <li class="navbar-links">
+                            <a href="/extra/Ausejo.html" class="links" target="_self">Ausejo</a>
+                            <a href="/extra/Barlam.html" class="links" target="_self">Barlam</a>
+                            <a href="/extra/Vista.html" class="links" target="_self">Vista</a>
+                            <button type="button" class="btn-about">About Us</button>
+                        </li>                   
+                    </ul>
+                </nav>               
+                <div class="nav-menu">
+                    <nav class="nav-mobile">
+                        <ul class="mobile-menu">
+                            <li class="navbar-mobile">
+                                <a href="#" class="mobile-links">Ausejo</a>
+                                <a href="#" class="mobile-links">Barlam</a>
+                                <a href="#" class="mobile-links">Vista</a>
+                                <button type="button" class="mobile-btn-about">About Us</button>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>                
+            </div>
         </header>
     </body>
+</html>
