--- a/extra/About-us.html
+++ b/extra/About-us.html
@@ -17,10 +17,8 @@
                 <nav class="nav">
                     <ul class="navbar-items">
                         <li class="navbar-links">
-                            <a href="/extra/Ausejo.html" class="links" target="_self">Ausejo</a>
-                            <a href="/extra/Barlam.html" class="links" target="_self">Barlam</a>
-                            <a href="/extra/Vista.html" class="links" target="_self">Vista</a>
-                            <button type="button" class="btn-about">About Us</button>
+                            
+                            <a href="About-us.html"><button type="button" class="btn-about">About Us</button></a>
                         </li>                   
                     </ul>
                 </nav>               
