--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -18,9 +21,9 @@
                 <nav class="nav">
                     <ul class="navbar-items">
                         <li class="navbar-links">
-                            <a href="/extra/Ausejo.html" class="links" target="_self">Vista</a>
-                            <a href="/extra/Barlam.html" class="links" target="_self">Barlam</a>
-                            <a href="/extra/Vista.html" class="links" target="_self">Careers</a>
+                            <a href="/extra/Ausejo.html" class="links" target="_self">Resume</a>
+                            <a href="/extra/Barlam.html" class="links" target="_self">Careers</a>
+                            <a href="/extra/Vista.html" class="links" target="_self">Contacts</a>
                             <a href="/extra/About-us.html"><button type="button" class="btn-about">About Us</button></a>
                         </li>                   
                     </ul>
@@ -39,5 +42,22 @@
                 </div>                
             </div>
         </header>
+        <!--
+        <div class="music">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6g8RrXuzsx3oImuTQYh2gs?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        -->
+        <div class="home-info">
+            <div class="person-1">
+                <img class="ausejo-image" src="/assets/img/Ausejo.jpg">
+            </div>
+            <div class="text">
+                <p>Althea Gayle Ausejo</p>
+                <p>SBIT-1J</p>
+            </div>
+            <div class="person-2">
+
+            </div>
+        </div>
     </body>
 </html>
