--- a/extra/Barlam.html
+++ b/extra/Barlam.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Portfolio</title>
+        <title>Careers</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/assets/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,10 +17,10 @@
                 <nav class="nav">
                     <ul class="navbar-items">
                         <li class="navbar-links">
-                            <a href="/extra/Ausejo.html" class="links" target="_self">Ausejo</a>
-                            <a href="/extra/Barlam.html" class="links" target="_self">Barlam</a>
-                            <a href="/extra/Vista.html" class="links" target="_self">Vista</a>
-                            <button type="button" class="btn-about">About Us</button>
+                            <a href="/extra/Ausejo.html" class="links" target="_self">Resume</a>
+                            <a href="/extra/Barlam.html" class="links" target="_self">Careers</a>
+                            <a href="/extra/Vista.html" class="links" target="_self">Contacts</a>
+                            <a href="/extra/About-us.html"><button type="button" class="btn-about">About Us</button></a>
                         </li>                   
                     </ul>
                 </nav>               
