--- a/extra/About-us.html
+++ b/extra/About-us.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Portfolio</title>
+        <title>About Us</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/assets/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,6 @@
                 <nav class="nav">
                     <ul class="navbar-items">
                         <li class="navbar-links">
-                            
                             <a href="About-us.html"><button type="button" class="btn-about">About Us</button></a>
                         </li>                   
                     </ul>
