--- a/assets/index.html
+++ b/assets/index.html
@@ -42,22 +42,7 @@
                 </div>                
             </div>
         </header>
-        <!--
-        <div class="music">
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6g8RrXuzsx3oImuTQYh2gs?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </div>
-        -->
-        <div class="home-info">
-            <div class="person-1">
-                <img class="ausejo-image" src="/assets/img/Ausejo.jpg">
-            </div>
-            <div class="text">
-                <p>Althea Gayle Ausejo</p>
-                <p>SBIT-1J</p>
-            </div>
-            <div class="person-2">
-
-            </div>
+        <div class="home-background">  
         </div>
     </body>
 </html>
