--- a/extra/About-us.html
+++ b/extra/About-us.html
@@ -7,6 +7,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap" rel="stylesheet">
+        <link rel="icon" href="/assets/img/qcu.png" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -35,5 +39,37 @@
                 </div>                
             </div>
         </header>
+        <div class="home-info">
+            <div class="person-1">
+                <img class="ausejo-image" src="/assets/img/Ausejo.jpg">
+            </div>
+            <div class="text">
+                <p>Althea Gayle Ausejo</p>
+                <p>SBIT-1J</p>
+                <p>18 Years Old</p>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5enxwA8aAbwZbf5qCHORXi?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="person-2">
+                <img class="barlam-image" src="/assets/img/Marjie.jpg">
+            </div>
+            <div class="person-2-text">
+                <p>Arjie Barlam</p>
+                <p>SBIT-1J</p>
+                <p>19 Years Old</p>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/16iRlyUMJVPqz62DlomMre?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="person-3">
+                <img class="vista-image" src="/assets/img/Val.jpg">
+            </div>
+            <div class="person-3-text">
+                <p>Valentino Vista III</p>
+                <p>SBIT-1J</p>
+                <p>18 Years Old</p>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3iGNoYKIabGohB9A0C7dKU?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+        </div>
     </body>
+    <footer>
+        <h1 style="color:DCD7C9;">hidden</h1>
+    </footer>
 </html>
