--- a/extra/Vista.html
+++ b/extra/Vista.html
@@ -7,6 +7,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -17,10 +20,7 @@
                 <nav class="nav">
                     <ul class="navbar-items">
                         <li class="navbar-links">
-                            <a href="/extra/Ausejo.html" class="links" target="_self">Resume</a>
-                            <a href="/extra/Barlam.html" class="links" target="_self">Careers</a>
-                            <a href="/extra/Vista.html" class="links" target="_self">Contacts</a>
-                            <a href="/extra/About-us.html"><button type="button" class="btn-about">About Us</button></a>
+                            <a href="/extra/Vista.html"><button type="button" class="btn-about">Contacts</button></a>
                         </li>                   
                     </ul>
                 </nav>               
@@ -38,5 +38,32 @@
                 </div>                
             </div>
         </header>
+        <div class="page-header">
+            <h1>Contact Us</h1>
+        </div>
+        <div class="contact-info">
+            <p class="contact-title">Facebook</p>
+            <a class="facebook-link" href="https://www.facebook.com/lthgyl29" target="_blank">Althea Gayle Ausejo</a>
+            <p class="contact-title">Email</p>
+            <a class="mail-me" href="mailto:altheagayle0629@gmail.com">altheagayle0629@gmail.com</a>
+            <p></p>
+        </div>
+        <div class="contact-info_2">
+            <p class="contact-title">Facebook</p>
+            <a class="facebook-link" href="https://www.facebook.com/arjie.barlam.1" target="_blank">Arjie Barlam</a>
+            <p class="contact-title">Email</p>
+            <a class="mail-me-2" href="mailto:barlam.arjie.fabia@gmail.com">barlam.arjie.fabia@gmail.com</a>
+        </div>
+        <div class="contact-info_3">
+            <p class="contact-title">Facebook</p>
+            <a class="facebook-link" href="https://www.facebook.com/profile.php?id=100009005429851" target="_blank">Valentino Vista III</a>
+            <p class="contact-title">Email</p>
+            <a class="mail-me-2" href="mailto:vista.valentino.samson@gmail.com">vista.valentino.samson@gmail.com</a>
+        </div>
+        <div class="home-background">
+            <h1>WS101 Midterm</h1>
+            <p>Activity 1</p>
+            <object class="home-bgrd" data="/assets/img/bgrd-cropped.svg"></object>
+        </div>
     </body>
 </html>
