--- a/assets/index.html
+++ b/assets/index.html
@@ -42,7 +42,42 @@
                 </div>                
             </div>
         </header>
-        <div class="home-background">  
+        <div class="home-page-title">
+            <h1 class="heading-title">WS101 Laboratory Activity 1</h1>
+            <p class="greeting-welcome">Welcome to the Home Page!</p>
+            <p class="paragraphs">Welcome to our Laboratory Project! This is the work of Group... 
+                from SBIT-1J. This portfolio contains the sample information and what its career is all about.
+                We have included the CSS design for the website to make it appealing for presentation.
+                We are delighted to have you here and have yourself a free tour of the website by navigating through the Navigation Bar!
+            </p>
         </div>
+        <div class="home-page-introduction">
+            <h1 class="introduction">Introduction</h1>
+            <p class="greeting-introduction">Hello!</p>
+            <p class="introduction-paragraph">This is the work of the students from SBIT-1J from the QCU San Bartolome Campus.
+                <br>
+                <br>
+                Each of the Group member contributions are located within the "About Us" section of the website located in our navbar.
+            </p>
+        </div>
+        <div class="about-career">
+            <h1 class="career-heading">Career: Cyber Security</h1>
+            <p class="about-cyber-sec">
+                Cyber security is the practice of defending computers, servers, mobile devices, electronic systems, networks, and data from malicious attacks. It's also known as information technology security or electronic information security. The term applies in a variety of contexts, from business to mobile computing, and can be divided into a few common categories.
+                <br>
+                <br>
+                The global cyber threat continues to evolve at a rapid pace, with a rising number of data breaches each year. A report by RiskBased Security revealed that a shocking 7.9 billion records have been exposed by data breaches in the first nine months of 2019 alone. This figure is more than double (112%) the number of records exposed in the same period in 2018.
+
+                Medical services, retailers and public entities experienced the most breaches, with malicious criminals responsible for most incidents. Some of these sectors are more appealing to cybercriminals because they collect financial and medical data, but all businesses that use networks can be targeted for customer data, corporate espionage, or customer attacks.
+                
+                With the scale of the cyber threat set to continue to rise, the International Data Corporation predicts that worldwide spending on cyber-security solutions will reach a massive $133.7 billion by 2022. Governments across the globe have responded to the rising cyber threat with guidance to help organizations implement effective cyber-security practices.
+                
+                In the U.S., the National Institute of Standards and Technology (NIST) has created a cyber-security framework. To combat the proliferation of malicious code and aid in early detection, the framework recommends continuous, real-time monitoring of all electronic resources.</p>
+
+                <p class="reference">REFERENCE: <a class="reference_link" href="https://www.kaspersky.com/resource-center/definitions/what-is-cyber-security">https://www.kaspersky.com/resource-center/definitions/what-is-cyber-security</a></p>
+        </div>
+        <footer class="home-page-footer">
+            <p class="footer-paragraph"><a class="group-link" href="/extra/About-us.html">Group Members: </a> Althea Gayle Ausejo | Arjie F. Barlam | Valentino III S. Vista</p>
+        </footer>
     </body>
 </html>
