--- a/extra/About-us.html
+++ b/extra/About-us.html
@@ -47,6 +47,8 @@
                 <p>Althea Gayle Ausejo</p>
                 <p>SBIT-1J</p>
                 <p>18 Years Old</p>
+                <p>Contribution:</p>
+                <p>Made the concept design for the webpages, as well as the color palettes.</p>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5enxwA8aAbwZbf5qCHORXi?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
             <div class="person-2">
@@ -56,6 +58,8 @@
                 <p>Arjie Barlam</p>
                 <p>SBIT-1J</p>
                 <p>19 Years Old</p>
+                <p>Contribution:</p>
+                <p>Built the entire idea and concept around the contents of the pages.</p>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/16iRlyUMJVPqz62DlomMre?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
             <div class="person-3">
@@ -65,6 +69,8 @@
                 <p>Valentino Vista III</p>
                 <p>SBIT-1J</p>
                 <p>18 Years Old</p>
+                <p>Contribution:</p>
+                <p>Coded the ideas and concepts build around the website.</p>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3iGNoYKIabGohB9A0C7dKU?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
