Fixed File Names
Fixed name of files

--- a/assets/index.html
+++ b/assets/index.html
@@ -21,9 +21,9 @@
                 <nav class="nav">
                     <ul class="navbar-items">
                         <li class="navbar-links">
-                            <a href="/extra/Ausejo.html" class="links" target="_self">Resume</a>
-                            <a href="/extra/Barlam.html" class="links" target="_self">Careers</a>
-                            <a href="/extra/Vista.html" class="links" target="_self">Contacts</a>
+                            <a href="/extra/Resume.html" class="links" target="_self">Resume</a>
+                            <a href="/extra/Career.html" class="links" target="_self">Careers</a>
+                            <a href="/extra/Contact.html" class="links" target="_self">Contacts</a>
                             <a href="/extra/About-us.html"><button type="button" class="btn-about">About Us</button></a>
                         </li>                   
                     </ul>
