--- a/extra/Contact.html
+++ b/extra/Contact.html
@@ -20,7 +20,7 @@
                 <nav class="nav">
                     <ul class="navbar-items">
                         <li class="navbar-links">
-                            <a href="/extra/Vista.html"><button type="button" class="btn-about">Contacts</button></a>
+                            <a href="/extra/Contact.html"><button type="button" class="btn-about">Contacts</button></a>
                         </li>                   
                     </ul>
                 </nav>               
